[package]
name = "mantikora_brain_dos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = "0.3.2"
serenity = { version = "0.11.6",default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2"